Attempting to fix blurry text.  Possible an issue with setting width in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -609,7 +609,6 @@ canvas#demo,
 canvas#reel {
 	position: relative;
 	z-index: 1;
-	width: 100%;
 	opacity: .95;
 }
 
